fix img alignment

--- a/screen.css
+++ b/screen.css
@@ -65,7 +65,6 @@ img {
   width: 20%;
   border-radius: 15px 50px 30px;
   height: auto;
-  margin:center;
 }
 a:link {
     color: #7FFFD4;
